added ooops tutorial as well

--- a/lessons/010_functions/function_tutorial.ipynb
+++ b/lessons/010_functions/function_tutorial.ipynb
@@ -22,15 +22,388 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "def greet():\n",
     "    \"\"\"A simple function that prints a greeting.\"\"\"\n",
     "    print(\"Hello, World!\")\n",
-    "\n",
-    "# Call the function\n",
-    "greet()"
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hello, World!\n"
+     ]
+    }
    ],
-   "outputs": []
+   "source": [
+    "greet()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def add_numbers(a,b):\n",
+    "    c= a+b\n",
+    "    return c"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "7"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "y = add_numbers(2,5)\n",
+    "y"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# default parameter"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def mul10(a, b=10):\n",
+    "     c= a*b\n",
+    "     return c"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "280"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "y= mul10(5, b=56)\n",
+    "y"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "150"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "z =mul10(15)\n",
+    "z"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# variable length argumnets\n",
+    "def sum_numbers(*args):\n",
+    "    d=sum(args)\n",
+    "    return d"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "175"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "y = sum_numbers(1,3,5,7, 18, 29, 45, 67)\n",
+    "y"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "13"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a=[1,3,4,5]\n",
+    "sum(a)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# keyword_argumnets"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def build_profile(first_name, last_name, **user_info):\n",
+    "    \"\"\"Build a user profile with additional information.\"\"\"\n",
+    "    profile = {\n",
+    "        'first_name': first_name,\n",
+    "        'last_name': last_name\n",
+    "    }\n",
+    "    \n",
+    "    # Add any additional information\n",
+    "    for key, value in user_info.items():\n",
+    "        profile[key] = value\n",
+    "    \n",
+    "    return profile\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'first_name': 'John', 'last_name': 'Doe', 'age': 30, 'city': 'New York'}"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "\n",
+    "user1 = build_profile(\"John\", \"Doe\", age=30, city=\"New York\")\n",
+    "user1\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'first_name': 'Jane',\n",
+       " 'last_name': 'Smith',\n",
+       " 'age': 25,\n",
+       " 'city': 'Boston',\n",
+       " 'occupation': 'Engineer'}"
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "user2 = build_profile(\"Jane\", \"Smith\", age=25, city=\"Boston\", occupation=\"Engineer\")\n",
+    "\n",
+    "user2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "user2 = build_profile(\"Jane\", \"Smith\", age=25, city=\"Boston\", occupation=\"Engineer\")\n",
+    "\n",
+    "print(user1)\n",
+    "print(user2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -45,6 +418,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
+   "outputs": [],
    "source": [
     "def greet_person(name):\n",
     "    \"\"\"Function with a parameter.\"\"\"\n",
@@ -53,8 +427,7 @@
     "# Call with argument\n",
     "greet_person(\"Alice\")\n",
     "greet_person(\"Bob\")"
-   ],
-   "outputs": []
+   ]
   },
   {
    "cell_type": "markdown",
@@ -69,6 +442,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
+   "outputs": [],
    "source": [
     "def add_numbers(a, b):\n",
     "    \"\"\"Function that adds two numbers.\"\"\"\n",
@@ -77,8 +451,7 @@
     "\n",
     "add_numbers(5, 3)\n",
     "add_numbers(10, 20)"
-   ],
-   "outputs": []
+   ]
   },
   {
    "cell_type": "markdown",
@@ -93,6 +466,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
+   "outputs": [],
    "source": [
     "def multiply(a, b):\n",
     "    \"\"\"Function that returns the product of two numbers.\"\"\"\n",
@@ -104,8 +478,7 @@
     "\n",
     "# Use directly in expressions\n",
     "print(f\"Double the result: {multiply(4, 7) * 2}\")"
-   ],
-   "outputs": []
+   ]
   },
   {
    "cell_type": "markdown",
@@ -120,6 +493,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
+   "outputs": [],
    "source": [
     "def greet_with_title(name, title=\"Mr.\"):\n",
     "    \"\"\"Function with default parameter.\"\"\"\n",
@@ -131,8 +505,7 @@
     "# Overriding default value\n",
     "print(greet_with_title(\"Johnson\", \"Dr.\"))\n",
     "print(greet_with_title(\"Davis\", \"Ms.\"))"
-   ],
-   "outputs": []
+   ]
   },
   {
    "cell_type": "markdown",
@@ -147,6 +520,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
+   "outputs": [],
    "source": [
     "def describe_pet(name, animal_type=\"dog\", age=1):\n",
     "    \"\"\"Function demonstrating keyword arguments.\"\"\"\n",
@@ -157,8 +531,7 @@
     "print(describe_pet(\"Max\", \"cat\"))\n",
     "print(describe_pet(name=\"Luna\", animal_type=\"bird\", age=2))\n",
     "print(describe_pet(age=5, name=\"Rex\"))"
-   ],
-   "outputs": []
+   ]
   },
   {
    "cell_type": "markdown",
@@ -173,6 +546,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
+   "outputs": [],
    "source": [
     "def sum_all(*numbers):\n",
     "    \"\"\"Function that sums any number of arguments.\"\"\"\n",
@@ -184,8 +558,7 @@
     "print(sum_all(1, 2, 3))\n",
     "print(sum_all(10, 20, 30, 40, 50))\n",
     "print(sum_all(5))"
-   ],
-   "outputs": []
+   ]
   },
   {
    "cell_type": "markdown",
@@ -200,6 +573,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
+   "outputs": [],
    "source": [
     "def build_profile(first_name, last_name, **user_info):\n",
     "    \"\"\"Build a user profile with additional information.\"\"\"\n",
@@ -219,8 +593,7 @@
     "\n",
     "print(user1)\n",
     "print(user2)"
-   ],
-   "outputs": []
+   ]
   },
   {
    "cell_type": "markdown",
@@ -235,6 +608,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
+   "outputs": [],
    "source": [
     "# Lambda function to square a number\n",
     "square = lambda x: x ** 2\n",
@@ -253,8 +627,7 @@
     "# Filter even numbers\n",
     "even_numbers = list(filter(lambda x: x % 2 == 0, numbers))\n",
     "print(f\"Even numbers: {even_numbers}\")"
-   ],
-   "outputs": []
+   ]
   },
   {
    "cell_type": "markdown",
@@ -269,6 +642,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
+   "outputs": [],
    "source": [
     "global_var = \"I'm global\"\n",
     "\n",
@@ -282,8 +656,7 @@
     "\n",
     "# This would cause an error:\n",
     "# print(local_var)  # NameError: name 'local_var' is not defined"
-   ],
-   "outputs": []
+   ]
   },
   {
    "cell_type": "markdown",
@@ -298,6 +671,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
+   "outputs": [],
    "source": [
     "def calculate_area_rectangle(length, width):\n",
     "    \"\"\"Calculate the area of a rectangle.\"\"\"\n",
@@ -325,8 +699,7 @@
     "print(f\"Is 8 even? {is_even(8)}\")\n",
     "print(f\"Is 7 even? {is_even(7)}\")\n",
     "print(f\"Factorial of 5: {factorial(5)}\")"
-   ],
-   "outputs": []
+   ]
   },
   {
    "cell_type": "markdown",
@@ -341,6 +714,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
+   "outputs": [],
    "source": [
     "# Exercise 1: Create a function that converts temperature from Celsius to Fahrenheit\n",
     "def celsius_to_fahrenheit(celsius):\n",
@@ -362,8 +736,7 @@
     "# print(celsius_to_fahrenheit(0))  # Should return 32\n",
     "# print(find_max_of_three(1, 5, 3))  # Should return 5\n",
     "# print(is_palindrome(\"racecar\"))  # Should return True"
-   ],
-   "outputs": []
+   ]
   },
   {
    "cell_type": "markdown",
@@ -387,7 +760,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "base",
    "language": "python",
    "name": "python3"
   },
@@ -401,7 +774,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.12.9"
   }
  },
  "nbformat": 4,
